--- a/Html/Concert.html
+++ b/Html/Concert.html
@@ -18,9 +18,9 @@
     </nav>
 
     <section class="img">
-        <img src="../img/blofgroep.jfif">
+        <img src="img/blofgroep.jfif">
         <br>
-        <img src="../img/blofvriende.jfif" width="300">
+        <img src="img/blofvriende.jfif" width="300">
     </section>
 
     <section class="text">
@@ -51,16 +51,16 @@
             himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
             lacinia bibendum, ante neque placerat sapien
             <video width="320" height="240" controls>
-                <source src="../img/blofmusic.mp4" type="video/mp4">
+                <source src="img/blofmusic.mp4" type="video/mp4">
             </video>
         </article>
     </section>
 <center>
     <section class="links">
-        <a href="https://www.topticketshop.nl/blof?gclid=CjwKCAiAob3vBRAUEiwAIbs5ThIcnJvcrZv13zXnErs88-DJPDUuO1uKmOk0mNenlfQC-R-zHOg9GxoCmHYQAvD_BwE"><img src="../img/blofzingen.jfif" height="125" width="225"></a>
-        <a href="https://www.rang1tickets.nl/blof-tickets?gclid=CjwKCAiAob3vBRAUEiwAIbs5TkAOTtUrr1rNOVVvNVkJKq-WZHQIY_8ZlqeGYtm2PMokk5EdnZvaYRoCG08QAvD_BwE"><img src="../img/bloflive.jfif" height="125" width="225"></a>
-        <a href="https://www.blof.nl/"><img src="../img/fotoshoot.jfif" height="125" width="225"></a>
-        <a href="https://www.festivalinfo.nl/artist/1237/Blof/"><img src="../img/duet.jfif" height="125" width="225"></a>
+        <a href="https://www.topticketshop.nl/blof?gclid=CjwKCAiAob3vBRAUEiwAIbs5ThIcnJvcrZv13zXnErs88-DJPDUuO1uKmOk0mNenlfQC-R-zHOg9GxoCmHYQAvD_BwE"><img src="img/blofzingen.jfif" height="125" width="225"></a>
+        <a href="https://www.rang1tickets.nl/blof-tickets?gclid=CjwKCAiAob3vBRAUEiwAIbs5TkAOTtUrr1rNOVVvNVkJKq-WZHQIY_8ZlqeGYtm2PMokk5EdnZvaYRoCG08QAvD_BwE"><img src="img/bloflive.jfif" height="125" width="225"></a>
+        <a href="https://www.blof.nl/"><img src="img/fotoshoot.jfif" height="125" width="225"></a>
+        <a href="https://www.festivalinfo.nl/artist/1237/Blof/"><img src="img/duet.jfif" height="125" width="225"></a>
     </section>
 </center>
 
