--- a/Html/Overons.html
+++ b/Html/Overons.html
@@ -28,7 +28,7 @@
 
     <div>
         ​<span></span>
-        <img src="../img/schattigaapje.jpg" height="300" width="300">
+        <img src="img/schattigaapje.jpg" height="300" width="300">
         <span>Mijn naam is Jozua en ik heb dit project samen gemaakt met Rogier, het werken met hem was wel leuk ik kan normaal niet
         echt samen werken met mensen maar met hem kan het wel, ik ben best wel een langzaame werker maar dat maakt hem niet echt uit.
         De website dat we samen moesten maken was wel leuk sinds ik niet echt veel weet over html en csss maar Rogier wel heeft me ook
@@ -37,7 +37,7 @@
 
     <div class="tweederij">
         ​<span></span>
-        <img src="../img/grumpycat.jfif" width="300" height="300">
+        <img src="img/grumpycat.jfif" width="300" height="300">
         <span>mijn naam is Rogier en ik heb dit project gemaakt met Jozua. hierbij type ik iets over get project. het was een interesant project ook om te zien wat je wel en niet kan
         en wat je nog moet leren maar ook hoe het samen werken verloopt en wat iedereen doet en hoeveel inzet iedereen heeft.
         ik ben tevreden hoe het is gegaan en wat het eind resultaat is.</span>
