--- a/Html/Sport.html
+++ b/Html/Sport.html
@@ -19,13 +19,13 @@
 
     <section class="NAVisuals">
         <a href="Sport1.html">
-            <img src="../img/NAFootball.jpg" width="225" height="175" title="Rugby" alt="Rugby"></a>
+            <img src="img/NAFootball.jpg" width="225" height="175" title="Rugby" alt="Rugby"></a>
 
         <a href="Sport2.html">
-            <img src="../img/Tennis.jpg" width="225" height="175" title="Tennis" alt="Tennis"></a>
+            <img src="img/Tennis.jpg" width="225" height="175" title="Tennis" alt="Tennis"></a>
 
         <a href="Sport3.html">
-            <img src="../img/Voetbal.jpg" width="225" height="175" title="Voetbal" alt="Voetbal"></a>
+            <img src="img/Voetbal.jpg" width="225" height="175" title="Voetbal" alt="Voetbal"></a>
 
     </section>
 
