--- a/Html/Sport3.html
+++ b/Html/Sport3.html
@@ -27,13 +27,13 @@
 
     <section class="sportpic">
 
-        <img src="../img/voetbalevenement.jpg" width="450" height="325" title="Plek" alt="Rugby">
+        <img src="img/voetbalevenement.jpg" width="450" height="325" title="Plek" alt="Rugby">
 
 
     </section>
 
     <section class="sportpic2">
-        <img src="../img/sportresultaat.png" width="450" height="325" title="Sport" alt="Tennis">
+        <img src="img/sportresultaat.png" width="450" height="325" title="Sport" alt="Tennis">
 
     </section>
 
