--- a/Html/concertfront.html
+++ b/Html/concertfront.html
@@ -17,7 +17,7 @@
         <a href="Overons.html">Overons</a>
     </nav>
 
-    <img class="front" src="../img/concerten.jfif" height="350" width="400">
+    <img class="front" src="img/concerten.jfif" height="350" width="400">
 
     <ul class="concert" >
         <li>Lorem ipsum dolor sit amet, consectetur</li>
@@ -41,13 +41,13 @@
     <center>
     <section class="concertimg">
         <a href="Concert.html">
-            <img src="../img/concert1.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
+            <img src="img/concert1.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
         <a href="Concert.html">
-            <img src="../img/concert2.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
+            <img src="img/concert2.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
         <a href="Concert.html">
-            <img src="../img/concert3.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
+            <img src="img/concert3.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
         <a href="Concert.html">
-            <img src="../img/concertblof.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
+            <img src="img/concertblof.jfif" width="230" height="200" title="Rugby" alt="Rugby"></a>
     </section>
     </center>
 
