--- a/Html/recepten.html
+++ b/Html/recepten.html
@@ -17,7 +17,7 @@
         <a href="Overons.html">Overons</a>
     </nav>
 
-    <img class="gerecht" src="../img/recepten.jpg" alt="foto boerenkool" height="350" width="350">
+    <img class="gerecht" src="img/recepten.jpg" alt="foto boerenkool" height="350" width="350">
 
     <section class="recepten">
         <h1>recepten</h1>
@@ -39,15 +39,15 @@
     <div class="row">
         <div class="column">
             <a href="rendang.html">
-                <img src="../img/rendang.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
+                <img src="img/rendang.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
         </div>
         <div class="column">
             <a href="De%20ReceptenPagina.html">
-                <img src="../img/stampot.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
+                <img src="img/stampot.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
         </div>
         <div class="column">
             <a href="kip.html">
-                <img src="../img/KIP.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
+                <img src="img/KIP.jpg" width="300" height="300" title="Rugby" alt="Rugby"></a>
         </div>
     </div>
 
