--- a/Html/index.html
+++ b/Html/index.html
@@ -22,7 +22,7 @@
         <h1 class="title">Nieuws uit Almere</h1>
 
         <article>
-            <img class="article" src="../img/Almere.jfif" alt="foto aanrijding" width="320">
+            <img class="article" src="img/Almere.jfif" alt="foto aanrijding" width="320">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel mollis tellus, eget
             aliquet nunc. In ac neque lacinia, tempus velit ac, iaculis lorem. Cras dignissim
             mauris sed turpis blandit pharetra. Aenean placerat condimentum ipsum, vel faucibus
@@ -37,7 +37,7 @@
         <article>
             Vivamus leo metus, fermentum sit amet velit id, tincidunt ullamcorper urna. Mauris
             et libero aliquam, accumsan nulla et, iaculis lectus. Etiam tempus luctus diam,
-            <img class="article" src="../img/Bussen.jfif" alt="hennepfoto" width="320">
+            <img class="article" src="img/Bussen.jfif" alt="hennepfoto" width="320">
             non efficitur metus euismod vitae. Curabitur sed turpis eget velit laoreet sollicitudin.
             Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
             himenaeos. Vestibulum et metus nibh. Nulla facilisi. Maecenas scelerisque, neque nec
@@ -56,7 +56,7 @@
             aliquam magna malesuada. Morbi aliquet sapien in eros blandit dictum. Sed gravida,
             neque sed facilisis semper, ante urna cursus urna, bibendum elementum ligula magna
             ac enim. Aliquam venenatis, purus eu eleifend fermentum, quam erat aliquam dolor,
-            <img class="article" src="../img/Politie.jfif" alt="hennepfoto" width="320">
+            <img class="article" src="img/Politie.jfif" alt="hennepfoto" width="320">
         </article>
     </section>
 
