--- a/Html/rendang.html
+++ b/Html/rendang.html
@@ -17,7 +17,7 @@
         <a href="Overons.html">Overons</a>
     </nav>
 
-    <img class="gerecht" src="../img/rendang.jpg" alt="foto boerenkool" height="350" width="350">
+    <img class="gerecht" src="img/rendang.jpg" alt="foto boerenkool" height="350" width="350">
 
     <section class="recepten">
         <h1>Boerenkool met worst</h1>
@@ -37,13 +37,13 @@
 
     <div class="row">
         <div class="column">
-            <img src="../img/rendanging.jpg" alt="Snow" width="300" height="300">
+            <img src="img/rendanging.jpg" alt="Snow" width="300" height="300">
         </div>
         <div class="column">
-            <img src="../img/rendangpan.jpg" alt="Forest" width="300" height="300">
+            <img src="img/rendangpan.jpg" alt="Forest" width="300" height="300">
         </div>
         <div class="column">
-            <img src="../img/rendangklaar.jpg" alt="Mountains" width="300" height="300">
+            <img src="img/rendangklaar.jpg" alt="Mountains" width="300" height="300">
         </div>
     </div>
 
