--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Onze BierHier Project</title>
 </head>
 <body>
+
+<a href="Html/index.html">Hooft Page Bierhier</a>
 
 </body>
 </html>
