--- a/Html/Contact.html
+++ b/Html/Contact.html
@@ -45,7 +45,7 @@
             <textarea name="message" rows=5" cols="15">
             </textarea>
             <br>
-                   <button type="submit" formaction="https://www.twitchquotes.com/emoticons/Jebaited">Submit</button>
+                   <button type="submit" formaction="img/Gandalf.gif">Submit</button>
                 </form>
 
         </article>
