--- a/Html/index.html
+++ b/Html/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="Bierhier.css">
 </head>
 <body>
+
+<meta name="vieport" content="width=device-width, initial-scale=1.0">
+
 <div id="wrapper">
 
     <nav>
